--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>me.ozzyfant</groupId>
     <artifactId>Levelled</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.1</version>
     <name>Levelled</name>
 
     <packaging>jar</packaging>
@@ -14,6 +14,10 @@
         <repository>
             <id>bukkit-repo</id>
             <url>http://repo.bukkit.org/content/groups/public/</url>
+        </repository>
+        <repository>
+            <id>vault-repo</id>
+            <url>http://ci.herocraftonline.com/plugin/repository/everything</url>
         </repository>
     </repositories>
 
