--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>me.ozzyfant.levelled</groupId>
     <artifactId>Levelled</artifactId>
-    <version>0.2-SNAPSHOT</version>
+    <version>0.2</version>
     <name>Levelled</name>
 
     <packaging>jar</packaging>
