--- a/pom.xml
+++ b/pom.xml
@@ -60,5 +60,28 @@
       </plugin>
         </plugins>
     </build>
+    
+    
+<reporting>
+
+  <plugins>
+     <plugin>
+           <groupId>org.codehaus.mojo</groupId>
+           <artifactId>findbugs-maven-plugin</artifactId>
+           <version>2.5.3</version>
+           <configuration>
+              <findbugsXmlOutput>true</findbugsXmlOutput>
+              <findbugsXmlWithMessages>true</findbugsXmlWithMessages>
+              <xmlOutput>true</xmlOutput>
+           </configuration>
+        </plugin>
+
+        
+
+   </plugins>
+
+  
+
+</reporting>
 
 </project>
