--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: Levelled
-version: 0.3-SNAPSHOT
+version: 1.0_Minecraft_1.7.2
 description: Simple level plugin using online time, placed blocks and/or destroyed blocks (or any combinations) for levelling up.
 
 author: ozzy2345
